[package]
name = "snapfile"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aversion = "0.2"
bookfile = "^0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.2"
