[package]
name = "trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0", features = ["backtrace"] }

pageserver_api = { path = "../libs/pageserver_api" }
utils = { path = "../libs/utils" }
