[package]
name = "trace"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
anyhow.workspace = true

pageserver_api.workspace = true
utils.workspace = true
workspace_hack.workspace = true
