[package]
name = "walkeeper"
version = "0.1.0"
authors = ["Stas Kelvich <stas@zenith.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.5"
bincode = "1.3"
bytes = "1.0.1"
byteorder = "1.4.3"
fs2 = "0.4.3"
lazy_static = "1.4.0"
serde_json = "1"
log = "0.4.14"
clap = "2.33.0"
daemonize = "0.4.1"
rust-s3 = { version = "0.27.0-rc4", features = ["no-verify-ssl"] }
tokio = "1.11"
tokio-stream = { version = "0.1.4" }
postgres-protocol = { git = "https://github.com/zenithdb/rust-postgres.git", rev="f744467a9904ef8258605c20ac0f318efb7659db" }
postgres = { git = "https://github.com/zenithdb/rust-postgres.git", rev="f744467a9904ef8258605c20ac0f318efb7659db" }
tokio-postgres = { git = "https://github.com/zenithdb/rust-postgres.git", rev="f744467a9904ef8258605c20ac0f318efb7659db" }
futures = "0.3.13"
anyhow = "1.0"
crc32c = "0.6.0"
humantime = "2.1.0"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"

# FIXME: 'pageserver' is needed for ZTimelineId. Refactor
pageserver = { path = "../pageserver" }
postgres_ffi = { path = "../postgres_ffi" }
workspace_hack = { path = "../workspace_hack" }
zenith_utils = { path = "../zenith_utils" }
