[package]
name = "vm_monitor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "vm-monitor"
path = "./src/bin/monitor.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-postgres.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.3.3"
